src/objects/Zuora__CreditMemoItem__c.object
<CustomObject>
    <description>Line items on credit memos.</description>
    <fields>
        <fullName>Zuora__AmountWithoutTax__c</fullName>
        <label>Amount Without Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__AppliedToOthersAmount__c</fullName>
        <label>Applied To Others Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__BeAppliedByOthersAmount__c</fullName>
        <label>Be Applied By Others Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__ChargeDate__c</fullName>
        <label>Charge Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__CreatedDate__c</fullName>
        <description>The date when the invoice was created in the Zuora system.</description>
        <label>Zuora Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditMemo__c</fullName>
        <label>Credit Memo</label>
        <referenceTo>Zuora__CreditMemo__c</referenceTo>
        <relationshipLabel>Credit Memo Items</relationshipLabel>
        <relationshipName>Credit_Memo_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zuora__Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__InvoiceItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Item</label>
        <referenceTo>Zuora__InvoiceItem__c</referenceTo>
        <relationshipLabel>Credit Memo Items</relationshipLabel>
        <relationshipName>Credit_Memo_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__ProcessingType__c</fullName>
        <label>Processing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__ServiceEndDate__c</fullName>
        <description>The service period end date of this memo.</description>
        <inlineHelpText>The service period end date of this memo.</inlineHelpText>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__ServiceStartDate__c</fullName>
        <description>The service period start date of this memo.</description>
        <inlineHelpText>The service period start date of this memo.</inlineHelpText>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__Sku__c</fullName>
        <label>SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionId__c</fullName>
        <label>Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxAmount__c</fullName>
        <description>The total tax amount of this memo.</description>
        <inlineHelpText>The total tax amount of this memo.</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxCodeName__c</fullName>
        <label>Tax Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxExemptAmount__c</fullName>
        <label>Tax Exempt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxMode__c</fullName>
        <label>Tax Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__UnitOfMeasure__c</fullName>
        <label>Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__UpdatedDate__c</fullName>
        <description>The date when the invoice was updated in the Zuora system.</description>
        <label>Zuora Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>Credit Memo Item</label>
    <nameField>
        <label>Credit Memo Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Memo Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>